Conversion vers SignalR, Ajout d'une DB Postgresql, Panier fonctionnel

--- a/LaboRevision/appsettings.json
+++ b/LaboRevision/appsettings.json
@@ -1,9 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "DefaultConnection": "User ID=pg;Password=password;Host=localhost;Port=5432;Database=pg;Pooling=true;MinPoolSize=0;MaxPoolSize=100;Connection Lifetime=0;"
     }
-  },
-  "AllowedHosts": "*"
 }
