--- a/LaboRevision/appsettings.json
+++ b/LaboRevision/appsettings.json
@@ -7,6 +7,6 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "DefaultConnection": "User ID=pg;Password=password;Host=localhost;Port=5432;Database=pg;Pooling=true;MinPoolSize=0;MaxPoolSize=100;Connection Lifetime=0;"
+        "DefaultConnection": "User ID=casaos;Password=casaos;Host=nas;Port=5432;Database=casaos;Pooling=true;MinPoolSize=0;MaxPoolSize=100;Connection Lifetime=0;"
     }
 }
