--- a/LaboRevision/LaboRevision.csproj
+++ b/LaboRevision/LaboRevision.csproj
@@ -17,4 +17,8 @@
       <ProjectReference Include="..\LaboRevision.DAL\LaboRevision.DAL.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Controllers\" />
+    </ItemGroup>
+
 </Project>
