--- a/LaboRevision/Properties/launchSettings.json
+++ b/LaboRevision/Properties/launchSettings.json
@@ -14,7 +14,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": false,
       "launchUrl": "swagger",
-      "applicationUrl": "http://localhost:5273",
+      "applicationUrl": "http://localhost:5273;http://192.168.0.201:5273",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
