Ajout Connexion, Inscription et historique de commandes

--- a/LaboRevision/appsettings.json
+++ b/LaboRevision/appsettings.json
@@ -7,6 +7,11 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "DefaultConnection": "User ID=casaos;Password=casaos;Host=nas;Port=5432;Database=casaos;Pooling=true;MinPoolSize=0;MaxPoolSize=100;Connection Lifetime=0;"
+        "DefaultConnection": "User ID=pg;Password=password;Host=localhost;Port=5432;Database=pg;Pooling=true;MinPoolSize=0;MaxPoolSize=100;Connection Lifetime=0;"
+    },
+    "Jwt": {
+        "Key": "2fbf9b2a-9109-40f9-9995-443f24c4d300",
+        "Issuer": "API_Revision",
+        "Audience": "FRONT_Revision"
     }
 }
